--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>LCARS jQuery Plugin Website System</title>
 	<link rel="stylesheet/less" href="demo.less" />
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-	<script src="http://lesscss.googlecode.com/files/less-1.0.41.min.js"></script>
+	<script src="https://lesscss.googlecode.com/files/less-1.0.41.min.js"></script>
 	<script type="text/javascript" src="src/jquery.lcars.js"></script>
 	<script type="text/javascript">
 	$(function(){
