--- a/css.html
+++ b/css.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>jQuery LCARS Framework</title>
 	<link rel="stylesheet/less" href="demo.less" />
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 	<script src="http://lesscss.googlecode.com/files/less-1.0.18.min.js"></script>
 	<script type="text/javascript" src="src/jquery.lcars.js"></script>
 	<script type="text/javascript">
