--- a/mobile.html
+++ b/mobile.html
@@ -1,11 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "https://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<meta https-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>jQuery LCARS Framework</title>
 	<link rel="stylesheet/less" href="demo.less" />
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-	<script src="http://lesscss.googlecode.com/files/less-1.0.18.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+	<script src="https://lesscss.googlecode.com/files/less-1.0.18.min.js"></script>
 	<script type="text/javascript" src="src/jquery.lcars.js"></script>
 	<script type="text/javascript">
 	$(function(){
@@ -91,7 +91,7 @@
 			
 			<p>This is a very useful system to help your mobile viewers to read what you want them to very easily. If you don't belive me check it out right now for yourself.</p>
 			
-		<p>If you need this explained on a deeper level please feel free to PM me on <a href="http://www.trekbss.com" target="_blank">trekbss.com</a> username Garrett00</p>
+		<p>If you need this explained on a deeper level please feel free to PM me on <a href="https://www.trekbss.com" target="_blank">trekbss.com</a> username Garrett00</p>
 		
 	</div>
 
