--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>jQuery LCARS Framework</title>
 	
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 	<script type="text/javascript" src="src/jquery.lcars.js"></script>
 	<script type="text/javascript">
 	$(function(){
@@ -34,7 +34,7 @@
 		
 		<ul>
 			<li><a href="mailto:joshuadmesser@gmail.com">E-Mail Me</a></li>
-			<li><a href="http://www.trekbbs.com">Trek BBS</a></li>
+			<li><a href="https://www.trekbbs.com">Trek BBS</a></li>
 		</ul>
 		
 		<p>As stated on the main page this Plugin is Licensed under <a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License v3</a> this means you are free do to with this as you please.</p>
