--- a/new.html
+++ b/new.html
@@ -28,9 +28,10 @@
 </head>
 <body>
 	
-	<div id="content">
+	<div id="content" style="text-align:center">
 
-		<h1>The LCARS Computer Network</h1>
+		<img src="graphics/UFP.bmp" alt="United Federation of Planets">
+		<h1><font color="#f90">The LCARS Computer Network</font></h1>
 		
 		<p>If any of the documention on this site does not help to anwser your questions please feel free to contact me in one of the following ways.</p>
 		
