--- a/new.html
+++ b/new.html
@@ -33,14 +33,9 @@
 		<img src="graphics/UFP.bmp" alt="United Federation of Planets">
 		<h1><font color="#f90">The LCARS Computer Network</font></h1>
 		
-		<p>If any of the documention on this site does not help to anwser your questions please feel free to contact me in one of the following ways.</p>
+		<p><font color="#f80">Authorized access only</font></p>
 		
-		<ul>
-			<li><a href="mailto:joshuadmesser@gmail.com">E-Mail Me</a></li>
-			<li><a href="https://www.trekbbs.com">Trek BBS</a></li>
-		</ul>
-		
-		<p>As stated on the main page this Plugin is Licensed under <a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License v3</a> this means you are free do to with this as you please.</p>
+		<p><font color="#f80">Authorized access only</font></p>
 		
 	</div>
 
