--- a/new.html
+++ b/new.html
@@ -46,9 +46,9 @@
 		<img src="graphics/UFP.bmp" alt="United Federation of Planets">
 		<h1><font color="#f90">The LCARS Computer Network</font></h1>
 		
-		<p style="background-color: rgb(153, 153, 255);">Authorized access only</p>
+		<p style="color: rgb(153, 153, 255);">Authorized access only</p>
 		
-		<p style="background-color: rgb(153, 153, 255);">Please report malfunctions to engineering staff on duty</p>
+		<p style="color: rgb(153, 153, 255);">Please report malfunctions to engineering staff on duty</p>
 		
 	</div>
 
