--- a/new.html
+++ b/new.html
@@ -39,7 +39,7 @@
 	</style>
 	<noscript><h1><font color="red">Javascript is required to view this page!</font></h1></noscript>
 </head>
-<body class="parent">
+<body>
 	
 	<div id="content child" style="text-align:center">
 
