--- a/new.html
+++ b/new.html
@@ -41,14 +41,19 @@
 </head>
 <body>
 	
-	<div id="content child" style="text-align:center">
+	<div id="content" style="text-align:center">
 
-		<img src="graphics/UFP.bmp" alt="United Federation of Planets">
-		<h1><font color="#f90">The LCARS Computer Network</font></h1>
-		
-		<p style="color: rgb(153, 153, 255);">Authorized access only</p>
-		
-		<p style="color: rgb(153, 153, 255);">Please report malfunctions to engineering staff on duty</p>
+		<div class="parent">
+			<div class="child">
+				<img src="graphics/UFP.bmp" alt="United Federation of Planets">
+				<h1><font color="#f90">The LCARS Computer Network</font></h1>
+				
+				<p style="color: rgb(153, 153, 255);">Authorized access only</p>
+				
+				<p style="color: rgb(153, 153, 255);">Please report malfunctions to engineering staff on duty</p>
+			</div>
+		</div>
+
 		
 	</div>
 
