--- a/new.html
+++ b/new.html
@@ -46,11 +46,11 @@
 		<div class="parent">
 			<div class="child">
 				<img src="graphics/UFP.bmp" alt="United Federation of Planets">
-				<h1><font color="#f90">The LCARS Computer Network</font></h1>
+				<p style="font-size:4em;"><font color="#f90">The LCARS Computer Network</font></p>
 				
-				<p style="color: rgb(153, 153, 255);">Authorized access only</p>
+				<p style="color:rgb(153, 153, 255);font-size:2em;">Authorized access only</p>
 				
-				<p style="color: rgb(153, 153, 255);">Please report malfunctions to engineering staff on duty</p>
+				<p style="color:rgb(153, 153, 255);font-size:2em;">Please report malfunctions to engineering staff on duty</p>
 			</div>
 		</div>
 
