--- a/new.html
+++ b/new.html
@@ -25,10 +25,6 @@
 	});
 	</script>
 	<style>
-
-.parent {
-  position: relative;
-}
 .child {
     position: absolute;
     left: 50%;
@@ -43,7 +39,7 @@
 	
 	<div id="content" style="text-align:center">
 
-		<div class="parent">
+		<div class="">
 			<div class="child">
 				<img src="graphics/UFP.bmp" alt="United Federation of Planets">
 				<p style="font-size:4em;"><font color="#f90">The LCARS Computer Network</font></p>
