--- a/new.html
+++ b/new.html
@@ -1,57 +1,65 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
+
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>jQuery LCARS Framework</title>
-	
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-	<script type="text/javascript" src="src/jquery.lcars.js"></script>
-	<script type="text/javascript">
-	$(function(){
-		$.lcars({
-			screen: 'panel',
-			title: 'Console 47',
-			subTitle: '',
-			colors: {
-				color1: 'blue',
-				color2: 'blue'
-			},
-			content: {
-				padding: '0 1em',
-				ele: '#content'
-			},
-			css: 'src/'
-		});
-	});
-	</script>
-	<style>
-.child {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <title>jQuery LCARS Framework</title>
 
-	</style>
-	<noscript><h1><font color="red">Javascript is required to view this page!</font></h1></noscript>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+  <script type="text/javascript" src="src/jquery.lcars.js"></script>
+  <script type="text/javascript">
+    $(function () {
+      $.lcars({
+        screen: 'panel',
+        title: 'Console 47',
+        subTitle: '',
+        colors: {
+          color1: 'blue',
+          color2: 'blue'
+        },
+        content: {
+          padding: '0 1em',
+          ele: '#content'
+        },
+        css: 'src/'
+      });
+    });
+  </script>
+  <style>
+    .child {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
+  <noscript>
+    <h1>
+      <font color="red">Javascript is required to view this page!</font>
+    </h1>
+  </noscript>
 </head>
+
 <body>
-	
-	<div id="content" style="text-align:center">
 
-		<div class="">
-			<div class="child">
-				<img src="graphics/UFP.bmp" alt="United Federation of Planets">
-				<p style="font-size:3em;"><font color="#f90">The LCARS Computer Network</font></p>
-				
-				<p style="color:rgb(153, 153, 255);font-size:2em;">Authorized access only</p>
-				
-				<p style="color:rgb(153, 153, 255);font-size:2em;">Please report malfunctions to engineering staff on duty</p>
-			</div>
-		</div>
+  <div id="content" style="text-align:center">
 
-		
-	</div>
+    <div class="">
+      <div class="child">
+        <img src="graphics/UFP.bmp" alt="United Federation of Planets">
+        <p style="font-size:3em;">
+          <font color="#f90">The LCARS Computer Network</font>
+        </p>
+
+        <p style="color:rgb(153, 153, 255);font-size:2em;">AUTHORIZED ACCESLY</p>
+
+        <p style="color:rgb(153, 153, 255);font-size:2em;">Please report malfunctions to engineering staff on duty</p>
+      </div>
+    </div>
+
+
+  </div>
 
 </body>
+
 </html>
