Make text uppercase

--- a/new.html
+++ b/new.html
@@ -48,12 +48,12 @@
       <div class="child">
         <img src="graphics/UFP.bmp" alt="United Federation of Planets">
         <p style="font-size:3em;">
-          <font color="#f90">The LCARS Computer Network</font>
+          <font color="#f90">THE LCARS COMPUTER NETWORK</font>
         </p>
 
         <p style="color:rgb(153, 153, 255);font-size:2em;">AUTHORIZED ACCESLY</p>
 
-        <p style="color:rgb(153, 153, 255);font-size:2em;">Please report malfunctions to engineering staff on duty</p>
+        <p style="color:rgb(153, 153, 255);font-size:2em;">PLEASE REPORT MALFUNCTIONS TO ENGINEERING STAFF ON DUTY</p>
       </div>
     </div>
 
