--- a/new.html
+++ b/new.html
@@ -51,7 +51,7 @@
           <font color="#f90">THE LCARS COMPUTER NETWORK</font>
         </p>
 
-        <p style="color:rgb(153, 153, 255);font-size:2em;">AUTHORIZED ACCESLY</p>
+        <p style="color:rgb(153, 153, 255);font-size:2em;">AUTHORIZED ACCESS ONLY</p>
 
         <p style="color:rgb(153, 153, 255);font-size:2em;">PLEASE REPORT MALFUNCTIONS TO ENGINEERING STAFF ON DUTY</p>
       </div>
