--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <title>jQuery LCARS Framework</title>
+  <title>BTTM LCARS SYSTEMS</title>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
   <script type="text/javascript" src="src/jquery.lcars.js"></script>
